syntax = "proto3";

package tool_io.v1;

import "tool_io/v1/tool_input.proto";
import "tool_io/v1/tool_output.proto";
import "tool_io/v1/permission.proto";

// HookEvent represents the type of hook event.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#hook-event
enum HookEvent {
  HOOK_EVENT_UNSPECIFIED = 0;
  HOOK_EVENT_PRE_TOOL_USE = 1;
  HOOK_EVENT_POST_TOOL_USE = 2;
  HOOK_EVENT_POST_TOOL_USE_FAILURE = 3;
  HOOK_EVENT_NOTIFICATION = 4;
  HOOK_EVENT_USER_PROMPT_SUBMIT = 5;
  HOOK_EVENT_SESSION_START = 6;
  HOOK_EVENT_SESSION_END = 7;
  HOOK_EVENT_STOP = 8;
  HOOK_EVENT_SUBAGENT_START = 9;
  HOOK_EVENT_SUBAGENT_STOP = 10;
  HOOK_EVENT_PRE_COMPACT = 11;
  HOOK_EVENT_PERMISSION_REQUEST = 12;
}

// PreToolUseHookInput represents input for the pre-tool-use hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#pre-tool-use-hook-input
message PreToolUseHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string tool_name = 5;
  ToolInput tool_input = 6;
}

// PostToolUseHookInput represents input for the post-tool-use hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#post-tool-use-hook-input
message PostToolUseHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string tool_name = 5;
  ToolInput tool_input = 6;
  ToolOutput tool_response = 7;
}

// PostToolUseFailureHookInput represents input for the post-tool-use-failure hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#post-tool-use-failure-hook-input
message PostToolUseFailureHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string tool_name = 5;
  ToolInput tool_input = 6;
  string error = 7;
  optional bool is_interrupt = 8;
}

// NotificationHookInput represents input for the notification hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#notification-hook-input
message NotificationHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string message = 5;
  optional string title = 6;
}

// UserPromptSubmitHookInput represents input for the user-prompt-submit hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#user-prompt-submit-hook-input
message UserPromptSubmitHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string prompt = 5;
}

// SessionStartSource represents the source of a session start event.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#session-start-hook-input
enum SessionStartSource {
  SESSION_START_SOURCE_UNSPECIFIED = 0;
  SESSION_START_SOURCE_STARTUP = 1;
  SESSION_START_SOURCE_RESUME = 2;
  SESSION_START_SOURCE_CLEAR = 3;
  SESSION_START_SOURCE_COMPACT = 4;
}

// SessionStartHookInput represents input for the session-start hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#session-start-hook-input
message SessionStartHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  SessionStartSource source = 5;
}

// SessionEndHookInput represents input for the session-end hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#session-end-hook-input
message SessionEndHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string reason = 5;
}

// StopHookInput represents input for the stop hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#stop-hook-input
message StopHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  bool stop_hook_active = 5;
}

// SubagentStartHookInput represents input for the subagent-start hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#subagent-start-hook-input
message SubagentStartHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string agent_id = 5;
  string agent_type = 6;
}

// SubagentStopHookInput represents input for the subagent-stop hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#subagent-stop-hook-input
message SubagentStopHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  bool stop_hook_active = 5;
}

// PreCompactTrigger represents the trigger for a pre-compact event.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#pre-compact-hook-input
enum PreCompactTrigger {
  PRE_COMPACT_TRIGGER_UNSPECIFIED = 0;
  PRE_COMPACT_TRIGGER_MANUAL = 1;
  PRE_COMPACT_TRIGGER_AUTO = 2;
}

// PreCompactHookInput represents input for the pre-compact hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#pre-compact-hook-input
message PreCompactHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  PreCompactTrigger trigger = 5;
  optional string custom_instructions = 6;
}

// PermissionRequestHookInput represents input for the permission-request hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#permission-request-hook-input
message PermissionRequestHookInput {
  string session_id = 1;
  string transcript_path = 2;
  string cwd = 3;
  optional string permission_mode = 4;
  string tool_name = 5;
  ToolInput tool_input = 6;
  repeated PermissionUpdate permission_suggestions = 7;
}

// HookInput is a union wrapper for all hook input types.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#hook-input
message HookInput {
  oneof input {
    PreToolUseHookInput pre_tool_use = 1;
    PostToolUseHookInput post_tool_use = 2;
    PostToolUseFailureHookInput post_tool_use_failure = 3;
    NotificationHookInput notification = 4;
    UserPromptSubmitHookInput user_prompt_submit = 5;
    SessionStartHookInput session_start = 6;
    SessionEndHookInput session_end = 7;
    StopHookInput stop = 8;
    SubagentStartHookInput subagent_start = 9;
    SubagentStopHookInput subagent_stop = 10;
    PreCompactHookInput pre_compact = 11;
    PermissionRequestHookInput permission_request = 12;
  }
}

// --- Hook Output Types ---

// AsyncHookJSONOutput represents the output of an async hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#async-hook-json-output
message AsyncHookJSONOutput {
  optional int32 async_timeout = 1;
}

// PreToolUseHookSpecificOutput represents hook-specific output for pre-tool-use hooks.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#pre-tool-use-hook-specific-output
message PreToolUseHookSpecificOutput {
  optional string permission_decision = 1;
  optional string permission_decision_reason = 2;
  optional ToolInput updated_input = 3;
}

// UserPromptSubmitHookSpecificOutput represents hook-specific output for user-prompt-submit hooks.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#user-prompt-submit-hook-specific-output
message UserPromptSubmitHookSpecificOutput {
  optional string additional_context = 1;
}

// SessionStartHookSpecificOutput represents hook-specific output for session-start hooks.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#session-start-hook-specific-output
message SessionStartHookSpecificOutput {
  optional string additional_context = 1;
}

// PostToolUseHookSpecificOutput represents hook-specific output for post-tool-use hooks.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#post-tool-use-hook-specific-output
message PostToolUseHookSpecificOutput {
  optional string additional_context = 1;
}

// HookSpecificOutput is a union wrapper for hook-specific output types.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#hook-specific-output
message HookSpecificOutput {
  oneof output {
    PreToolUseHookSpecificOutput pre_tool_use = 1;
    UserPromptSubmitHookSpecificOutput user_prompt_submit = 2;
    SessionStartHookSpecificOutput session_start = 3;
    PostToolUseHookSpecificOutput post_tool_use = 4;
  }
}

// SyncHookJSONOutput represents the output of a synchronous hook.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#sync-hook-json-output
message SyncHookJSONOutput {
  optional bool continue = 1;
  optional bool suppress_output = 2;
  optional string stop_reason = 3;
  optional string decision = 4;
  optional string system_message = 5;
  optional string reason = 6;
  optional HookSpecificOutput hook_specific_output = 7;
}

// HookJSONOutput is a union wrapper for all hook output types.
// Copied from https://platform.claude.com/docs/en/agent-sdk/typescript#hook-json-output
message HookJSONOutput {
  oneof output {
    AsyncHookJSONOutput async_output = 1;
    SyncHookJSONOutput sync_output = 2;
  }
}
